[package]
name = "adventofcode"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
image = "0.25.8"
itertools = "0.14.0"
lazy_static = "1.4.0"
md-5 = "0.10.6"
num_cpus = "1.13.1"
petgraph = "0.8.2"
regex = "1.5.4"
serde_json = "1.0.73"
